--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,7 +8,9 @@ spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.batch.initialize-schema=never
+#spring.batch.initialize-schema=never
+api.db-init=true
+#spring.datasource.data=data_init.sql
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
 
