--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 
 #spring.batch.initialize-schema=never
 api.db-init=true
+add.test=false
 #spring.datasource.data=data_init.sql
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
