--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     compile('com.oracle:ojdbc6:11.2.0.3.0')
     compile('org.hibernate:hibernate-java8:5.0.0.Final')
     compile('org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final')
+    compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('javax.xml.bind:jaxb-api:2.3.0')
