--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,11 +5,12 @@ spring.datasource.password=DIPBA
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 
 # create-drop,update
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialize=false
+spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.initialize=false
+#spring.datasource.initialization-mode=always
 #spring.jpa.show-sql=true
 
-#spring.batch.initialize-schema=never
+
 #api.db-init=true
 #spring.datasource.data=data_init.sql
 
