Càlcul de la valoració total

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,7 +8,7 @@ spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialize=false
 #spring.datasource.initialization-mode=always
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
 
 #api.db-init=true
