--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
   		<artifactId>lombok</artifactId>
   		<version>1.18.4</version>
   	</dependency>
+  	
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-cache</artifactId>
+     </dependency>
+    
   	<dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-test</artifactId>
