--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,13 @@
 	    <artifactId>spring-boot-starter-test</artifactId>
 	    <scope>test</scope>
 	</dependency>
+	
+	<dependency>
+	    <groupId>commons-lang</groupId>
+	    <artifactId>commons-lang</artifactId>
+	    <version>2.6</version>
+	</dependency>
+	
 	<dependency>
 	    <groupId>javax.xml.bind</groupId>
 	    <artifactId>jaxb-api</artifactId>
