--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -1,12 +1,12 @@
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
-spring.datasource.username=dipba
-spring.datasource.password=dipba
-spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-spring.datasource.testWhileIdle = true
-spring.datasource.timeBetweenEvictionRunsMillis = 3600000
-spring.datasource.validationQuery = SELECT 1
-#spring.datasource.jndi-name=jdbc/DSDIBA
+#spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
+#spring.datasource.username=dipba
+#spring.datasource.password=dipba
+#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+#spring.datasource.testWhileIdle = true
+#spring.datasource.timeBetweenEvictionRunsMillis = 3600000
+#spring.datasource.validationQuery = SELECT 1
+spring.datasource.jndi-name=jdbc/DSDIBA
 
 # create-drop,update
 spring.jpa.hibernate.ddl-auto=none
