--- a/pom.xml
+++ b/pom.xml
@@ -192,12 +192,7 @@
 	    <version>2.6</version>
 	</dependency>
 	
-	<dependency>
-	    <groupId>io.rest-assured</groupId>
-	    <artifactId>rest-assured</artifactId>
-	    <version>3.0.6</version>
-	    <scope>test</scope>
-	</dependency>
+	
 	
 	<dependency>
 	    <groupId>javax.xml.bind</groupId>
@@ -228,4 +223,5 @@
 		    </properties>
 		</profile>
   </profiles>
+  <packaging>war</packaging>
 </project>
