Segona versió del model

--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -18,16 +18,16 @@ swagger.host=dsdiba-api.in2.es
 #swagger.host=localhost:7001
 swagger.path=/
 
-#api.db-init=true
+#api.db-init=v2
 #spring.datasource.data=data_init.sql
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
 
 server.port = 7001
 
-server.servlet.context-path=/dsdiba
+server.servlet.context-path=/dsdiba/api
 
-debug= true
+#debug= true
 
 logging.file=dsdiba.log
 
