--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -11,12 +11,12 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 
-server.servlet.context-path=/dsdiba
+server.servlet.context-path=/dsdiba/api
 
 swagger.host=localhost:8090
 swagger.path=/
 
-#api.db-init=true
+#api.db-init=v2
 #spring.datasource.data=data_init.sql
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
