Autenticación cambios sprint

--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -31,6 +31,12 @@ server.servlet.context-path=/dsdiba/api
 
 logging.file=dsdiba.log
 
+jwt.header.authorization.key=Authorization
+jwt.header.token.bearer.prefix=Bearer 
+jwt.key=6gLMra8dvuyP5jUE
+jwt.header.token.expiration=300000
+jwt.header.issuer=DSDIBA-API
+
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
