--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   <build>
+  	<directory>target</directory>
   	<resources>
 		<resource>
 			<directory>src/main/resources</directory>
@@ -63,24 +64,7 @@
 		            </archive>
 		         </configuration>
 		      </plugin>
-       <!-- 
-      <plugin>
-		    <groupId>com.mysema.maven</groupId>
-		    <artifactId>apt-maven-plugin</artifactId>
-		    <version>1.1.3</version>
-		    <executions>
-		        <execution>
-		            <goals>
-		                <goal>process</goal>
-		            </goals>
-		            <configuration>
-		                <outputDirectory>src/main/generated</outputDirectory>
-		                <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-		            </configuration>
-		        </execution>
-		    </executions>
-		</plugin>
-		-->
+       
     </plugins>
   </build>
  
@@ -117,6 +101,35 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-validation</artifactId>
   	</dependency>
+  	<!-- 
+  	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-config</artifactId>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-web</artifactId>
+	</dependency>
+	 -->
+	 <!-- 
+	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-security</artifactId>
+  	</dependency>  -->
+	<!-- dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-jwt</artifactId>
+	</dependency-->
+	<!-- 
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt</artifactId>
+	    <version>0.9.1</version>
+	</dependency> -->
+  	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-crypto</artifactId>
+	</dependency>
   	<dependency>
   		<groupId>com.querydsl</groupId>
   		<artifactId>querydsl-core</artifactId>
