--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -16,6 +16,13 @@ server.servlet.context-path=/dsdiba/api
 swagger.host=localhost:8090
 swagger.path=/
 
+jwt.header.authorization.key=Authorization
+jwt.header.token.bearer.prefix=Bearer 
+jwt.key=6gLMra8dvuyP5jUE
+jwt.header.token.expiration=300000
+jwt.header.issuer=DSDIBA-API
+
+
 #api.db-init=v2
 #spring.datasource.data=data_init.sql
 
