--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialization-mode=always
 #spring.jpa.show-sql=true
 
-swagger.host=dsdiba-api.in2.es
+swagger.host=dsdiba.api.demo.in2.es
 #swagger.host=localhost:7001
 swagger.path=/
 
