--- a/ .gitlab-ci.yml
+++ b/ .gitlab-ci.yml
@@ -1,20 +1,15 @@
-stages:
-  - build
+image: maven:latest
 
+variables:
+  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
-build-artifacts:des:
+cache:
+  paths:
+    - .m2/repository/
+    - target/
+
+build:
   stage: build
-  image: maven:latest
-  when: manual
-  
-  variables:
-    MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
-    MAVEN_CLI_OPTS: "--batch-mode"
- 
   script:
-       - "mvn -DskipTests -P des clean package" 
-       
-  artifacts:
-    paths:
-        - /builds/gitlab/in2/ds-diba-api/target/ds-diba-api-0.0.1-SNAPSHOT.war
-
+    - mvn $MAVEN_CLI_OPTS clean package
