--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,8 @@
   	<dependency>
   		<groupId>com.oracle</groupId>
   		<artifactId>ojdbc6</artifactId>
-  		<version>11.2.0.3</version>
+  		<version>11.2.0.3.0</version>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.hibernate</groupId>
