--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,9 @@ stages:
 variables:
   MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
+  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE:$CI_BUILD_REF_NAME
+  CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
+
 
 cache:
   paths:
@@ -19,6 +22,44 @@ build:
   script:
     - mvn clean package -DskipTests -Pdes
     
+build-docker-image:
+  stage: build-docker
+  image: docker:git
+  only:
+  - tags
+  - master
+  - develop
+  services:
+  - docker:dind
+  tags:
+  - docker
+  dependencies:
+  - build-artifacts
+  before_script:
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+  script:
+  - docker build -t $CONTAINER_TEST_IMAGE .
+  - docker push $CONTAINER_TEST_IMAGE
+
+release-image:
+  stage: release
+  image: docker:git
+  only:
+  - tags
+  - master
+  services:
+  - docker:dind
+  tags:
+  - docker
+  dependencies:
+  before_script:
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+  script:
+  - docker pull $CONTAINER_TEST_IMAGE
+  - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
+  - docker push $CONTAINER_RELEASE_IMAGE
+
+    
 ## DEV
 deploy:
   stage: deploy
@@ -28,7 +69,7 @@ deploy:
     name: develop
     url: http://dsdiba.demo.in2.es
   only:
-  - master
+  - develop
   variables:
     DEPLOYMENT_KEY: $DEPLOYMENT_DEV_KEY
     DEPLOYMENT_SERVER: $DEPLOYMENT_DEV_SERVER
