--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <name>spring</name>
       <url>http://repo.spring.io/plugins-release</url>
     </repository>
+    <repository>
+      <id>maven_central</id>
+      <name>maven central</name>
+      <url>https://mvnrepository.com/repos/central</url>
+    </repository>
   </repositories>
   
   <build>
