--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
   stage: build
   when: manual
   script:
-    - mvn clean package -DskipTests -Pdes jgitflow:release-start
+    - mvn clean package -DskipTests -Pdes 
     
 
 
