--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,23 @@
 		            </archive>
 		         </configuration>
 		      </plugin>
-       
+       <plugin>
+            <groupId>external.atlassian.jgitflow</groupId>
+            <artifactId>jgitflow-maven-plugin</artifactId>
+            <version>1.0-m5.1</version>
+            <configuration>
+            	<username>danielfi</username>
+      			<password>in2pass.2019</password>
+                <flowInitContext>
+		         <masterBranchName>master</masterBranchName>
+		         <developBranchName>develop</developBranchName>
+		         <featureBranchPrefix>feature-</featureBranchPrefix>
+		         <releaseBranchPrefix>release-</releaseBranchPrefix>
+		         <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+		         <versionTagPrefix>tag-</versionTagPrefix>
+		       </flowInitContext>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
  
