--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
                     <allowUntracked>true</allowUntracked>
             	<username>danielfi</username>
       			<password>in2pass.2019</password>
-      			<noDeploy>false</noDeploy>
+      			<noDeploy>true</noDeploy>
                 <flowInitContext>
 		         <masterBranchName>master</masterBranchName>
 		         <developBranchName>develop</developBranchName>
