--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,10 @@ cache:
 
 build:
   stage: build
-  when: manual
+  only:
+  - master
   script:
-    - mvn clean package -DskipTests -Pdes jgitflow:release-start
+    - mvn clean package -DskipTests -Pdes 
     
 
 
@@ -26,7 +27,6 @@ build:
 ## DEV
 deploy:
   stage: deploy
-  when: manual
   image: kinogmt/centos-ssh
   environment:
     name: develop
@@ -48,4 +48,5 @@ deploy:
   - ssh-add ~/.ssh/id_rsa
   - ssh-keyscan -H $DEPLOYMENT_SERVER >> ~/.ssh/known_hosts
   script:
-  - scp -r ./target/*.war ${DEPLOYMENT_USER}@${DEPLOYMENT_SERVER}:${DEPLOYMENT_PATH}/
+  - scp -r ./target/*.war ${DEPLOYMENT_USER}@${DEPLOYMENT_SERVER}:${DEPLOYMENT_PATH}/ds-diba-api.war
+  - ssh ${DEPLOYMENT_USER}@${DEPLOYMENT_SERVER} "/home/weblogic/redeployBack.sh"
