--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -12,7 +12,7 @@ spring.datasource.jndi-name=jdbc/DSDIBA
 spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialize=false
 #spring.datasource.initialization-mode=always
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
 swagger.host=dsdiba.api.demo.in2.es
 #swagger.host=localhost:7001
