--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-validation</artifactId>
   	</dependency>
-  	<!-- 
+  	
   	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-config</artifactId>
@@ -139,22 +139,24 @@
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-web</artifactId>
 	</dependency>
-	 -->
-	 <!-- 
+	 
+	 
 	<dependency>
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-security</artifactId>
-  	</dependency>  -->
-	<!-- dependency>
+  	</dependency>  
+  	<!-- 
+	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-jwt</artifactId>
-	</dependency-->
-	<!-- 
+	</dependency>
+	 -->
+	
 	<dependency>
 	    <groupId>io.jsonwebtoken</groupId>
 	    <artifactId>jjwt</artifactId>
 	    <version>0.9.1</version>
-	</dependency> -->
+	</dependency> 
   	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-crypto</artifactId>
