--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -34,7 +34,7 @@ logging.file=dsdiba.log
 jwt.header.authorization.key=Authorization
 jwt.header.token.bearer.prefix=Bearer 
 jwt.key=6gLMra8dvuyP5jUE
-jwt.header.token.expiration=300000
+jwt.header.token.expiration=86400000
 jwt.header.issuer=DSDIBA-API
 
 #spring.jpa.show-sql=true
