--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   </repositories>
   
   <build>
-  	<directory>target</directory>
+  	<directory>target2</directory>
   	<resources>
 		<resource>
 			<directory>src/main/resources</directory>
@@ -130,11 +130,12 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-validation</artifactId>
   	</dependency>
-  	
+ 
   	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-config</artifactId>
 	</dependency>
+	
 	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-web</artifactId>
@@ -144,23 +145,26 @@
 	<dependency>
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-security</artifactId>
-  	</dependency>  
-  	<!-- 
+  	</dependency>
+  	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt</artifactId>
+	    <version>0.9.1</version>
+	</dependency>
+	  
+  	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-crypto</artifactId>
+	</dependency>
+  	  
+  	<!-- no 
 	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-jwt</artifactId>
 	</dependency>
 	 -->
 	
-	<dependency>
-	    <groupId>io.jsonwebtoken</groupId>
-	    <artifactId>jjwt</artifactId>
-	    <version>0.9.1</version>
-	</dependency> 
-  	<dependency>
-	    <groupId>org.springframework.security</groupId>
-	    <artifactId>spring-security-crypto</artifactId>
-	</dependency>
+	
   	<dependency>
   		<groupId>com.querydsl</groupId>
   		<artifactId>querydsl-core</artifactId>
@@ -236,7 +240,6 @@
 	    <artifactId>commons-lang</artifactId>
 	    <version>2.6</version>
 	</dependency>
-	
 	
 	
 	<dependency>
