Updating develop poms back to pre merge state

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>es.in2</groupId>
   <artifactId>ds-diba-api</artifactId>
   
-  <version>0.0.8</version>
+  <version>0.0.9-SNAPSHOT</version>
   <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
