--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   </repositories>
   
   <build>
-  	<directory>target2</directory>
+  	<directory>target</directory>
   	<resources>
 		<resource>
 			<directory>src/main/resources</directory>
