Adecuación de la BBDD al entorno de DIBA

--- a/src/main/resources/application-dvol.properties
+++ b/src/main/resources/application-dvol.properties
@@ -1,26 +1,14 @@
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=DIPBA
-spring.datasource.password=DIPBA
-spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-#spring.datasource.jndi-name=jdbc/DSDIBA
-
-# Demo
-#spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
-#spring.datasource.username=dipba
-#spring.datasource.password=dipba
-
 #spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
-#spring.datasource.username=OPS$INFODSDIBA
-#spring.datasource.password=infodsdiba
+##spring.datasource.username=OPS$INFODSDIBA
+##spring.datasource.password=infodsdiba
 #spring.datasource.username=DSDIBA
 #spring.datasource.password=DSDIBA
-
-
 #spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.testWhileIdle = true
 #spring.datasource.timeBetweenEvictionRunsMillis = 3600000
 #spring.datasource.validationQuery = SELECT 1
+spring.datasource.jndi-name=jdbc/ds-dibads
 
 # create-drop,update
 spring.jpa.hibernate.ddl-auto=none
@@ -28,26 +16,28 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 
-server.servlet.context-path=/dsdiba/api
-
-swagger.host=localhost:8090
+swagger.host=su0353.corpo.ad.diba.es
+#swagger.host=localhost:7001
 swagger.path=/
-
-jwt.header.authorization.key=Authorization
-jwt.header.token.bearer.prefix=Bearer 
-jwt.key=6gLMra8dvuyP5jUE
-jwt.header.token.expiration=86400000
-jwt.header.issuer=DSDIBA-API
-
 
 #api.db-init=v2
 #spring.datasource.data=data_init.sql
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
 
-server.port = 8090
+server.port = 8030
+
+server.servlet.context-path=/DS-DIBAAPI
 
 #debug= true
+
+#logging.file=dsdiba.log
+
+jwt.header.authorization.key=Authorization
+jwt.header.token.bearer.prefix=Bearer 
+jwt.key=6gLMra8dvuyP5jUE
+jwt.header.token.expiration=86400000
+jwt.header.issuer=DSDIBA-API
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
@@ -63,4 +53,6 @@ logging:
     org.hibernate.SQL: DEBUG
     org.springframework: WARN
     
+
+
 error.notfound= no trobat
