--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,11 @@
   	</dependency>
   	<dependency>
   		<groupId>io.springfox</groupId>
+  		<artifactId>springfox-bean-validators</artifactId>
+  		<version>2.9.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>io.springfox</groupId>
   		<artifactId>springfox-swagger-ui</artifactId>
   		<version>2.9.2</version>
   	</dependency>
@@ -271,6 +276,13 @@
 		    <id>des</id>
 		    <properties>
 		        <activatedProperties>des</activatedProperties>
+		        <target>target</target>
+		    </properties>
+		</profile>
+		<profile>
+		    <id>dvol</id>
+		    <properties>
+		        <activatedProperties>dvol</activatedProperties>
 		        <target>target</target>
 		    </properties>
 		</profile>
