--- a/src/main/resources/application-dvol.properties
+++ b/src/main/resources/application-dvol.properties
@@ -1,14 +1,14 @@
 # Oracle settings
-#spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
+spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
 ##spring.datasource.username=OPS$INFODSDIBA
 ##spring.datasource.password=infodsdiba
-#spring.datasource.username=DSDIBA
-#spring.datasource.password=DSDIBA
-#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=DSDIBA
+spring.datasource.password=DSDIBA
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.testWhileIdle = true
 #spring.datasource.timeBetweenEvictionRunsMillis = 3600000
 #spring.datasource.validationQuery = SELECT 1
-spring.datasource.jndi-name=jdbc/ds-dibads
+#spring.datasource.jndi-name=jdbc/ds-dibads
 
 # create-drop,update
 spring.jpa.hibernate.ddl-auto=none
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 
-swagger.host=su0353.corpo.ad.diba.es
+swagger.host=su0353.corpo.ad.diba.es:8030
 #swagger.host=localhost:7001
 swagger.path=/
 
@@ -27,7 +27,7 @@ swagger.path=/
 
 server.port = 8030
 
-server.servlet.context-path=/DS-DIBAAPI
+server.servlet.context-path=/dsdiba/api
 
 #debug= true
 
