GRANTS Y SET ROLE ALL MEDIANTE AOP

--- a/src/main/resources/application-dvol.properties
+++ b/src/main/resources/application-dvol.properties
@@ -1,9 +1,9 @@
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
-##spring.datasource.username=OPS$INFODSDIBA
-##spring.datasource.password=infodsdiba
-spring.datasource.username=DSDIBA
-spring.datasource.password=DSDIBA
+spring.datasource.username=OPS$INFODSDIBA
+spring.datasource.password=infodsdiba
+#spring.datasource.username=DSDIBA
+#spring.datasource.password=DSDIBA
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.testWhileIdle = true
 #spring.datasource.timeBetweenEvictionRunsMillis = 3600000
