--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,8 @@
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=DIPBA
-spring.datasource.password=DIPBA
-spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=DIPBA
+#spring.datasource.password=DIPBA
+#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.jndi-name=jdbc/DSDIBA
 
 # Demo
@@ -10,17 +10,19 @@ spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.username=dipba
 #spring.datasource.password=dipba
 
-#spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
-#spring.datasource.username=OPS$INFODSDIBA
-#spring.datasource.password=infodsdiba
+spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
+spring.datasource.username=OPS$INFODSDIBA
+spring.datasource.password=infodsdiba
 #spring.datasource.username=DSDIBA
 #spring.datasource.password=DSDIBA
 
 
-#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.testWhileIdle = true
 #spring.datasource.timeBetweenEvictionRunsMillis = 3600000
-#spring.datasource.validationQuery = SELECT 1
+#spring.datasource.validationQuery = SET ROLE ALL
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # create-drop,update
 spring.jpa.hibernate.ddl-auto=none
@@ -39,6 +41,8 @@ jwt.key=6gLMra8dvuyP5jUE
 jwt.header.token.expiration=86400000
 jwt.header.issuer=DSDIBA-API
 
+spring.datasource.tomcat.initSQL=SET ROLE ALL
+spring.datasource.initSQL=SET ROLE ALL
 
 #api.db-init=v2
 #spring.datasource.data=data_init.sql
