--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -1,12 +1,14 @@
 # Oracle settings
-#spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
 #spring.datasource.username=dipba
 #spring.datasource.password=dipba
-#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-#spring.datasource.testWhileIdle = true
-#spring.datasource.timeBetweenEvictionRunsMillis = 3600000
-#spring.datasource.validationQuery = SELECT 1
-spring.datasource.jndi-name=jdbc/DSDIBA
+spring.datasource.username=DSDIBA
+spring.datasource.password=dsdiba
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+spring.datasource.testWhileIdle = true
+spring.datasource.timeBetweenEvictionRunsMillis = 3600000
+spring.datasource.validationQuery = SELECT 1
+#spring.datasource.jndi-name=jdbc/DSDIBA
 
 # create-drop,update
 spring.jpa.hibernate.ddl-auto=none
@@ -14,14 +16,21 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 
-swagger.host=dsdiba.api.demo.in2.es
-#swagger.host=localhost:7001
+#spring.datasource.hikari.connectionInitSql=SET ROLE ALL
+
+#swagger.host=dsdiba.api.demo.in2.es
+swagger.host=localhost:7001
 swagger.path=/
 
-#api.db-init=v2
+#api.db-init=true
 #spring.datasource.data=data_init.sql
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
+
+spring.jpa.database-platform: org.hibernate.dialect.Oracle10gDialect
+spring.jpa.properties.hibernate.synonyms=true
+hibernate.synonyms=true
+hibernate.connection.includeSynonyms=true
 
 server.port = 7001
 
