--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -32,7 +32,7 @@ spring.jpa.show-sql=true
 
 server.servlet.context-path=/dsdiba/api
 
-swagger.host=localhost:8090
+swagger.host=localhost:7001
 swagger.path=/
 
 jwt.header.authorization.key=Authorization
@@ -50,7 +50,9 @@ spring.datasource.initSQL=SET ROLE ALL
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
 
 server.port = 8090
-
+hibernate.show_sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
 #debug= true
 
 #spring.jpa.show-sql=true
@@ -63,8 +65,11 @@ logging:
   config: classpath:logback.xml
   level:
     org.springframework.boot.SpringApplication: INFO
-    es.in2.sicad: DEBUG
+    log4j.logger.org.hibernate.SQL: debug
+    log4j.logger.org.hibernate.type: trace  
     org.hibernate.SQL: DEBUG
     org.springframework: WARN
     
 error.notfound= no trobat
+
+hibernate.seq=DSDIBA.HIBERNATE_SEQUENCE
