--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -1,9 +1,9 @@
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
-#spring.datasource.username=dipba
-#spring.datasource.password=dipba
-spring.datasource.username=DSDIBA
-spring.datasource.password=dsdiba
+spring.datasource.username=DIPBA
+spring.datasource.password=dipba
+##spring.datasource.username=DSDIBA
+##spring.datasource.password=dsdiba
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 3600000
@@ -15,14 +15,16 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialize=false
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
-
+#hibernate.show_sql=true
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.datasource.hikari.connectionInitSql=SET ROLE ALL
 
 #swagger.host=dsdiba.api.demo.in2.es
 swagger.host=localhost:7001
 swagger.path=/
 
-#api.db-init=true
+#api.db-init=v2
 #spring.datasource.data=data_init.sql
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
