--- a/pom.xml
+++ b/pom.xml
@@ -264,7 +264,11 @@
 	    <version>2.6</version>
 	</dependency>
 	
-	
+	<dependency>
+	    <groupId>org.glassfish.jersey.core</groupId>
+	    <artifactId>jersey-client</artifactId>
+	    <version>2.25.1</version>
+	</dependency>
 	<dependency>
 	    <groupId>javax.xml.bind</groupId>
 	    <artifactId>jaxb-api</artifactId>
