--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -47,6 +47,13 @@ jwt.header.token.bearer.prefix=Bearer
 jwt.key=6gLMra8dvuyP5jUE
 jwt.header.token.expiration=86400000
 jwt.header.issuer=DSDIBA-API
+vus.clau.key=clau_vus
+vus.clau.value=fernandezid2019
+vus.usuari.key=usuari_vus
+vus.usuari.value=OPS$FERNANDEZID
+vus.ws.clau.key=ws_clau
+vus.ws.usuari.key=ws_usuari
+vus.url=https://iasprd.diba.cat:7778/servweb/validacio_usuari_vus
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
