--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,8 @@
 # Oracle settings
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-#spring.datasource.username=DIPBA
-#spring.datasource.password=DIPBA
-#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=DIPBA
+spring.datasource.password=DIPBA
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.jndi-name=jdbc/DSDIBA
 
 # Demo
@@ -10,9 +10,9 @@
 #spring.datasource.username=dipba
 #spring.datasource.password=dipba
 
-spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
-spring.datasource.username=OPS$INFODSDIBA
-spring.datasource.password=infodsdiba
+#spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
+#spring.datasource.username=OPS$INFODSDIBA
+#spring.datasource.password=infodsdiba
 #spring.datasource.username=DSDIBA
 #spring.datasource.password=DSDIBA
 
@@ -32,7 +32,7 @@ spring.jpa.show-sql=true
 
 server.servlet.context-path=/dsdiba/api
 
-swagger.host=localhost:7001
+swagger.host=localhost:8090
 swagger.path=/
 
 jwt.header.authorization.key=Authorization
@@ -40,6 +40,13 @@ jwt.header.token.bearer.prefix=Bearer
 jwt.key=6gLMra8dvuyP5jUE
 jwt.header.token.expiration=86400000
 jwt.header.issuer=DSDIBA-API
+vus.clau.key=clau_vus
+vus.clau.value=fernandezid2019
+vus.usuari.key=usuari_vus
+vus.usuari.value=OPS$FERNANDEZID
+vus.ws.clau.key=ws_clau
+vus.ws.usuari.key=ws_usuari
+vus.url=https://iasprd.diba.cat:7778/servweb/validacio_usuari_vus
 
 spring.datasource.tomcat.initSQL=SET ROLE ALL
 spring.datasource.initSQL=SET ROLE ALL
