Nou camp ROL.CODI

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -41,12 +41,13 @@ jwt.key=6gLMra8dvuyP5jUE
 jwt.header.token.expiration=86400000
 jwt.header.issuer=DSDIBA-API
 vus.clau.key=clau_vus
-vus.clau.value=fernandezid2019
 vus.usuari.key=usuari_vus
-vus.usuari.value=OPS$FERNANDEZID
 vus.ws.clau.key=ws_clau
+vus.ws.clau.value=dsver2019
 vus.ws.usuari.key=ws_usuari
+vus.ws.usuari.value=dsdiba
 vus.url=https://iasprd.diba.cat:7778/servweb/validacio_usuari_vus
+vus.aplicacio=DS-DIBA
 
 spring.datasource.tomcat.initSQL=SET ROLE ALL
 spring.datasource.initSQL=SET ROLE ALL
