Integración con VUS

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,14 +1,14 @@
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=DIPBA
-spring.datasource.password=DIPBA
-spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=DIPBA
+#spring.datasource.password=DIPBA
+#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 #spring.datasource.jndi-name=jdbc/DSDIBA
 
 # Demo
-#spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
-#spring.datasource.username=dipba
-#spring.datasource.password=dipba
+spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
+spring.datasource.username=dipba
+spring.datasource.password=dipba
 
 #spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
 #spring.datasource.username=OPS$INFODSDIBA
