Correciones varias - Añadidos nuevos parametros de configuración - Añadidos Fix para varios errores detectados en el entorno de desarrollo. - Fix para errores reportados por el cliente.

--- a/src/main/resources/application-des.properties
+++ b/src/main/resources/application-des.properties
@@ -2,28 +2,28 @@
 spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
 spring.datasource.username=DIPBA
 spring.datasource.password=dipba
-##spring.datasource.username=DSDIBA
-##spring.datasource.password=dsdiba
+
+#other db config
+#spring.datasource.jndi-name=jdbc/DSDIBA
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 3600000
 spring.datasource.validationQuery = SELECT 1
-#spring.datasource.jndi-name=jdbc/DSDIBA
+
 
 # create-drop,update
 spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialize=false
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
-#hibernate.show_sql=true
 #logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.datasource.hikari.connectionInitSql=SET ROLE ALL
 
-#swagger.host=dsdiba.api.demo.in2.es
-swagger.host=localhost:7001
+swagger.host=dsdiba.api.demo.in2.es
 swagger.path=/
 
+#Options true=creación inicial de los datos.... v1: so de api 1, v2 uso de api en su ultima version.
 #api.db-init=v2
 #spring.datasource.data=data_init.sql
 
@@ -35,11 +35,9 @@ hibernate.synonyms=true
 hibernate.connection.includeSynonyms=true
 
 server.port = 7001
-
 server.servlet.context-path=/dsdiba/api
 
 #debug= true
-
 logging.file=dsdiba.log
 
 jwt.header.authorization.key=Authorization
@@ -47,6 +45,9 @@ jwt.header.token.bearer.prefix=Bearer
 jwt.key=6gLMra8dvuyP5jUE
 jwt.header.token.expiration=86400000
 jwt.header.issuer=DSDIBA-API
+
+#Vus config
+vus.authentication.disabled=true
 vus.clau.key=clau_vus
 vus.clau.value=fernandezid2019
 vus.usuari.key=usuari_vus
@@ -54,6 +55,14 @@ vus.usuari.value=OPS$FERNANDEZID
 vus.ws.clau.key=ws_clau
 vus.ws.usuari.key=ws_usuari
 vus.url=https://iasprd.diba.cat:7778/servweb/validacio_usuari_vus
+#Nuevo valor
+vus.ws.clau.value=dsver2019
+vus.ws.usuari.value=dsdiba
+vus.aplicacio=DS-DIBA
+
+#Diba config
+diba.front.auth.url=http://dsdiba.demo.in2.es/dsdiba/auth
+
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
