--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,83 +1,83 @@
 # Oracle settings
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-#spring.datasource.username=DIPBA
-#spring.datasource.password=DIPBA
-#spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-#spring.datasource.jndi-name=jdbc/DSDIBA
-
-# Demo
 spring.datasource.url=jdbc:oracle:thin:@10.14.1.165:1521:xe
-spring.datasource.username=dipba
+spring.datasource.username=DIPBA
 spring.datasource.password=dipba
 
-#spring.datasource.url=jdbc:oracle:thin:@sucs353.corpo.ad.diba.es:1541:SIT
-#spring.datasource.username=OPS$INFODSDIBA
-#spring.datasource.password=infodsdiba
-#spring.datasource.username=DSDIBA
-#spring.datasource.password=DSDIBA
-
-
+#other db config
+#spring.datasource.jndi-name=jdbc/DSDIBA
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-#spring.datasource.testWhileIdle = true
-#spring.datasource.timeBetweenEvictionRunsMillis = 3600000
-#spring.datasource.validationQuery = SET ROLE ALL
+spring.datasource.testWhileIdle = true
+spring.datasource.timeBetweenEvictionRunsMillis = 3600000
+spring.datasource.validationQuery = SELECT 1
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # create-drop,update
 spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialize=false
 #spring.datasource.initialization-mode=always
-spring.jpa.show-sql=true
-
-server.servlet.context-path=/dsdiba/api
+spring.jpa.show-sql=false
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.datasource.hikari.connectionInitSql=SET ROLE ALL
 
 swagger.host=localhost:8090
 swagger.path=/
+
+#Options true=creación inicial de los datos.... v1: so de api 1, v2 uso de api en su ultima version.
+#api.db-init=v2
+#spring.datasource.data=data_init.sql
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
+
+spring.jpa.database-platform: org.hibernate.dialect.Oracle10gDialect
+spring.jpa.properties.hibernate.synonyms=true
+hibernate.synonyms=true
+hibernate.connection.includeSynonyms=true
+
+server.port = 8090
+server.servlet.context-path=/dsdiba/api
+
+#debug= true
+#logging.file=dsdiba.log
 
 jwt.header.authorization.key=Authorization
 jwt.header.token.bearer.prefix=Bearer 
 jwt.key=6gLMra8dvuyP5jUE
 jwt.header.token.expiration=86400000
 jwt.header.issuer=DSDIBA-API
+
+#Vus config
+vus.authentication.disabled=true
 vus.clau.key=clau_vus
+vus.clau.value=fernandezid2019
 vus.usuari.key=usuari_vus
+vus.usuari.value=OPS$FERNANDEZID
 vus.ws.clau.key=ws_clau
-vus.ws.clau.value=dsver2019
 vus.ws.usuari.key=ws_usuari
-vus.ws.usuari.value=dsdiba
 vus.url=https://iasprd.diba.cat:7778/servweb/validacio_usuari_vus
+#Nuevo valor
+vus.ws.clau.value=dsver2019
+vus.ws.usuari.value=dsdiba
 vus.aplicacio=DS-DIBA
 
-spring.datasource.tomcat.initSQL=SET ROLE ALL
-spring.datasource.initSQL=SET ROLE ALL
+#Diba config
+diba.front.auth.url=http://dsdiba.demo.in2.es/dsdiba/auth
 
-#api.db-init=v2
-#spring.datasource.data=data_init.sql
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
-
-server.port = 8090
-hibernate.show_sql=true
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql=trace
-#debug= true
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
 #spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.type=trace 
+#spring.jpa.properties.hibernate.type=trace
 
 logging:
   config: classpath:logback.xml
   level:
     org.springframework.boot.SpringApplication: INFO
     log4j.logger.org.hibernate.SQL: debug
-    log4j.logger.org.hibernate.type: trace  
+    log4j.logger.org.hibernate.type: trace
     org.hibernate.SQL: DEBUG
     org.springframework: WARN
-    
-error.notfound= no trobat
 
-hibernate.seq=DSDIBA.HIBERNATE_SEQUENCE
+
+error.notfound= no trobat
